# neural-style-transfer

./: .gitignore  README.md  REPORT.md  pyproject.toml
experiments/research_styleweight/: summary.csv
experiments/research_styleweight/exp_styleweight_1000/: params.txt
experiments/research_styleweight/exp_styleweight_10000/: params.txt
experiments/research_styleweight/exp_styleweight_100000/: params.txt
experiments/research_styleweight/exp_styleweight_1000000/: params.txt
src/: main.py
src/style_transfer/: experiment.py  losses.py  model.py  service.py  trainer.py  utils.py
src/templates/: upload_form.html
